# roboptim-core

./: .codecov.yml  .gitignore  .gitmodules  .mailmap  .travis.build.sh  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  Makefile.am  NEWS  README  README.md  THANKS  TODO  appveyor.yml  bootstrap  configure.ac  liboptimization.m4  package.xml  roboptim-core.m4  roboptim-core.spec.in
.travis/: after_failure  after_success  before_install  build
build-aux/: autotest.at  autotest.mk  boost.m4  bootstrap  cfsqp.m4  deb.mk  doxygen.m4  (+10 more)
doc/: Doxyfile.extra.in  Doxyfile.in  Makefile.am  aist-upload.sh.in  filters.html  getting-started.html  header.html  operators-decorators.html  package.css  sf-upload.sh.in
include/: Makefile.am
include/liboptimization/: cfsqp.hh  derivable-function.hh  dummy.hh  function.hh  fwd.hh  generic-solver.hh  indent.hh  ipopt.hh  linear-function.hh  numeric-linear-function.hh  numeric-quadratic-function.hh  problem-converter.hh  problem-converter.hxx  problem.hh  problem.hxx  quadratic-function.hh  result-with-warnings.hh  result.hh  solver-error.hh  solver-warning.hh  solver.hh  solver.hxx  twice-derivable-function.hh  util.hh  util.hxx
include/roboptim/: core.hh
include/roboptim-core/: cfsqp.hh  derivable-function.hh  dummy.hh  function.hh  fwd.hh  generic-solver.hh  indent.hh  ipopt.hh  linear-function.hh  n-times-derivable-function.hh  n-times-derivable-function.hxx  numeric-linear-function.hh  numeric-quadratic-function.hh  problem.hh  problem.hxx  quadratic-function.hh  result-with-warnings.hh  result.hh  solver-error.hh  solver-warning.hh  solver.hh  solver.hxx  twice-derivable-function.hh  util.hh  util.hxx
include/roboptim-core/visualization/: gnuplot-commands.hh  gnuplot-function.hh  gnuplot.hh
include/roboptim/core/: alloc.hh  cache.hh  cache.hxx  cached-function.hh  cached-function.hxx  constant-function.hh  debug.hh  derivable-function.hh  derivable-parametrized-function.hh  derivative-size.hh  differentiable-function.hh  differentiable-function.hxx  finite-difference-gradient.hh  finite-difference-gradient.hxx  freeze.hh  function-pool.hh  function-pool.hxx  function.hh  function.hxx  fwd.hh  generic-solver.hh  identity-function.hh  indent.hh  io.hh  linear-function.hh  linear-function.hxx  n-times-derivable-function.hh  n-times-derivable-function.hxx  numeric-linear-function.hh  numeric-linear-function.hxx  numeric-quadratic-function.hh  numeric-quadratic-function.hxx  optimization-logger.hh  optimization-logger.hxx  parametrized-function.hh  parametrized-function.hxx  portability.hh  problem.hh  problem.hxx  quadratic-function.hh  (+26 more)
include/roboptim/core/callback/: multiplexer.hh  multiplexer.hxx  wrapper.hh  wrapper.hxx
include/roboptim/core/decorator/: cached-function.hh  cached-function.hxx  finite-difference-gradient.hh  finite-difference-gradient.hxx
include/roboptim/core/detail/: autopromote.hh  structured-input.hh  structured-input.hxx  utility.hh
include/roboptim/core/filter/: bind.hh  bind.hxx  cached-function.hh  cached-function.hxx  chain.hh  chain.hxx  concatenate.hh  concatenate.hxx  derivative.hh  map.hh  map.hxx  minus.hh  minus.hxx  plus.hh  plus.hxx  product.hh  product.hxx  scalar.hh  scalar.hxx  selection-by-id.hh  selection-by-id.hxx  selection.hh  selection.hxx  split.hh  split.hxx  vector-interpolation.hh  vector-interpolation.hxx
include/roboptim/core/function/: constant.hh  cos.hh  identity.hh  polynomial.hh  polynomial.hxx  sin.hh
include/roboptim/core/operator/: bind.hh  bind.hxx  chain.hh  chain.hxx  concatenate.hh  concatenate.hxx  derivative.hh  map.hh  map.hxx  minus.hh  minus.hxx  plus.hh  plus.hxx  product.hh  product.hxx  scalar.hh  scalar.hxx  selection-by-id.hh  selection-by-id.hxx  selection.hh  selection.hxx  split.hh  split.hxx
include/roboptim/core/plugin/: dummy-laststate.hh  dummy-laststate.hxx  dummy-td.hh  dummy.hh  dummy.hxx
include/roboptim/core/plugin/nag/: nag-differentiable.hh  nag-nlp-sparse.hh  nag-nlp.hh  nag-simplex.hh  nag.hh
include/roboptim/core/visualization/: fwd.hh  gnuplot-commands.hh  gnuplot-differentiable-function.hh  gnuplot-function.hh  gnuplot-matrix.hh  gnuplot.hh  matplotlib-commands.hh  matplotlib-function.hh  matplotlib-matrix.hh  matplotlib.hh  util.hh
src/: CMakeLists.txt  Makefile.am  alloc.cc  cfsqp.cc  cfsqp.hh  constant-function.cc  debug.cc  debug.hh  derivable-function.cc  differentiable-function.cc  doc.hh  dummy-d-sparse-laststate.cc  dummy-laststate.cc  dummy-sparse.cc  dummy-td.cc  dummy.cc  dummy.hh  finite-difference-gradient.cc  freeze.cc  function.cc  function.hh  fwd.hh  generic-solver.cc  identity-function.cc  indent.cc  ipopt.cc  ipopt.hh  linear-function.cc  nag-differentiable.cc  nag-nlp-sparse.cc  nag-nlp.cc  nag-simplex.cc  nag.cc  numeric-linear-function.cc  numeric-quadratic-function.cc  optimization-fwd.hh  optimization.cc  optimization.hh  problem.cc  problem.hh  (+17 more)
src/plug-in/: Makefile.am
src/plug-in/dummy/: Makefile.am  dummy.cc
src/visualization/: gnuplot-commands.cc  gnuplot-differentiable-function.cc  gnuplot-matrix.cc  gnuplot.cc  matplotlib-commands.cc  matplotlib-matrix.cc  matplotlib.cc
tests/: CMakeLists.txt  Makefile.am  atlocal.in  cache.cc  cache.stdout  cached-function.cc  cached-function.stdout  cfsqp.at  cfsqp.cc  cfsqp.stdout  common.hh  constant-function.cc  constant-function.stdout  decorator-cached-function.cc  decorator-cached-function.stdout  decorator-finite-difference-gradient.cc  decorator-finite-difference-gradient.stdout  decorator-finite-difference-jacobian.cc  decorator-finite-difference-jacobian.stdout  derivable-function-sparse.stdout  derivable-function.cc  derivable-function.stdout  derivable-parametrized-function.cc  derivable-parametrized-function.stdout  detail-autopromote.cc  detail-structured-input.cc  detail-utility.cc  example.cc  example.stdout  filter-bind.cc  filter-cached-function.cc  filter-chain.cc  filter-concatenate.cc  filter-derivative.cc  filter-map.cc  filter-minus.cc  filter-plus.cc  filter-product.cc  filter-product.stdout  filter-scalar.cc  (+132 more)
(+3687 files in other folders)
