<?xml version="1.0"?>
<package>
  <name>roboptim-core</name>
  <version>0.1.0</version>
  <description>This plus provides the core librairie to do optimization in robotics.</description>

  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  
  <run_depend>rclcpp</run_depend>

</package>
