<?xml version="1.0"?>
<package format="3">
  <name>roboptim-core</name>
  <version>0.1.0</version>
  <description>This plus provides the core librairie to do optimization in robotics.</description>

  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <depend>libboost-dev</depend>
  <depend>libboost-date-time-dev</depend>
  <depend>libboost-system-dev</depend>
  <depend>libboost-filesystem-dev</depend>
  <depend>libboost-test-dev</depend>
  <depend>libeigen3-dev</depend>
  <depend>liblapack-dev</depend>
  <depend>libblas-dev</depend>
  <depend>libltdl-dev</depend>
  
  <exec_depend>rclcpp</exec_depend>

</package>
